fixed resource layout bug on safari

--- a/assets/scss/modules/_resources.scss
+++ b/assets/scss/modules/_resources.scss
@@ -73,7 +73,7 @@
 		padding: 32px 0;
 		border-bottom: 1px solid #9d9d9d;
 		align-items: center;	
-		
+
 		&:last-child {
 			border-bottom: none; 
 		}
@@ -89,7 +89,7 @@
 		}
 
 		&__title {
-			flex: 9;
+			flex: 0 9 auto;
 			
 			h5 {
 				color: #fff;
@@ -103,7 +103,7 @@
 		}
 
 		&__date {
-			flex: 5;
+			flex: 0 5 auto;
 			text-align: center;
 			
 			h5 {
@@ -112,7 +112,7 @@
 		}
 
 		&__link {
-			flex: 3;
+			flex: 0 3 auto;
 			
 			h5 {
 				float: right;
@@ -124,7 +124,7 @@
 		}
 
 		&__detail {
-			// flex: 0 1 100%;
+			flex: 0 1 100%;
 			
 			h6 {
 				color: #c1c1c1;
